# a2t.ro

./: .env.example  .gitignore  Dockerfile.auth  README.md  auth_server.py  dashboard.html  dashboard.html.bak  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: refresh-dashboard-data.yml
data/: sample_campaigns.csv
data/output/: campaign_recommendations.csv  category_summary.csv  channel_summary.csv  daily_pacing.csv  decision_log.csv  google_ads_campaigns_raw.csv  history_campaign_recommendations.csv  history_channel_summary.csv  history_daily_pacing.csv  product_summary.csv
docs/: server-deploy.md
evidence/: package-lock.json  package.json
evidence/pages/: index.md
evidence/sources/: reports.sql
scripts/: install_cron.sh  refresh_a2t.sh
src/a2t_budget_control/: __init__.py  cli.py  engine.py  google_ads.py  models.py  rules.py
tests/: test_rules.py
